scss/style.scss
@import 'config';
@import 'utilities';
@import 'form';

/*-------------------------
          CORE STYLES
-------------------------*/
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Roboto', sans-serif;
  font-size: 1.2rem;
  line-height: 1.6;
  background-color: #fff;
  color: #333;
}

a {
  text-decoration: none;
  color: $primary-color;
}

ul {
  list-style: none;
}

img {
  width: 100%;
}

/*-------------------------
          NAVBAR
-------------------------*/
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.7rem 2rem;
  position: fixed;
  z-index: 1;
  width: 100%;
  top: 0;
  opacity: 0.9;

  ul {
    display: flex;
  }

  a {
    color: #fff;
    padding: 0.45rem;
    margin: 0 0.25rem;

    &:hover {
      color: $primary-color;
    }
  }
}

/*-------------------------
          LANDING & ANIMATION
-------------------------*/
.landing {
  position: relative;
  background: url('../img/landingpage.jpg') no-repeat center center/cover;
  height: 100vh;

  &-inner {
    color: #fff;
    height: 100%;
    display: flex;
    flex-direction: column;
    width: 80%;
    margin: auto;
    align-items: center;
    justify-content: center;
    text-align: center;
  }
}

.box {
  background-color: $primary-color;
  display: inline-block;
  padding: 10px 40px;
  font-size: 20px;
  border-radius: 5px;
}

.animated {
  -webkit-animation-duration: 15s;
  animation-duration: 15s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

@-webkit-keyframes bounceIn {
  0% {
    opacity: 0;
    -webkit-transform: scale(0.3, 0.3, 0.3);
  }

  20% {
    -webkit-transform: scale(1.1, 1.1, 1.1);
  }

  40% {
    -webkit-transform: scale(0.9, 0.9, 0.9);
  }

  60% {
    opacity: 1;
    -webkit-transform: scale(1.03, 1.03, 1.03);
  }

  80% {
    -webkit-transform: scale(0.97, 0.97, 0.97, 0.97);
  }

  to {
    -webkit-transform: scale(1, 1, 1);
  }
}

@keyframes bounceIn {
  0% {
    opacity: 0;
    transform: scale(0.3);
  }
  50% {
    opacity: 1;
    transform: scale(1.05);
  }
  70% {
    transform: scale(0.9);
  }
  100% {
    transform: scale(1);
  }
}

.bounceIn {
  -webkit-animation-name: bounceIn;
  animation-name: bounceIn;
}

/*-------------------------
          NAV LINK COLOR
-------------------------*/
.nav-a {
  a {
    color: black;
  }
}

/*-------------------------
          ABOUT
-------------------------*/
.profile {
  display: grid;
  grid-template-columns: 6fr 6fr;
  grid-gap: 4rem;
  align-items: center;
  padding: 1rem;
  line-height: 1.8;
  margin-bottom: 1rem;
}

span {
  color: $primary-color;
}

/*-------------------------
          PROJECTS
-------------------------*/
.cards {
  margin: 0 auto;
  max-width: 1200px;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
  grid-auto-rows: auto;
  grid-gap: 1rem;
  padding-top: 30px;
}

.cards * {
  box-sizing: border-box;
}

.card__image {
  width: 100%;
  height: 200px;
  object-fit: cover;
  display: block;
  border-top: 2px solid #333333;
  border-right: 2px solid #333333;
  border-left: 2px solid #333333;
}

.card__content {
  line-height: 1.5;
  padding: 15px;
  background: #fafafa;
  border-right: 2px solid #333333;
  border-left: 2px solid #333333;
}

.card__content > p:first-of-type {
  margin-top: 0;
}

.card__content > p:last-of-type {
  margin-bottom: 0;
}

.card__info {
  padding: 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #555555;
  background: #eeeeee;
  font-size: 0.8em;
  border-bottom: 2px solid #333333;
  border-right: 2px solid #333333;
  border-left: 2px solid #333333;
}

.card__info .card-icon {
  font-size: 0.9em;
  margin-right: 8px;
}

.card__link {
  color: $primary-color;
  text-decoration: none;
}

.card__link:hover {
  text-decoration: underline;
}

/*-------------------------
          CONTACT
-------------------------*/
.contact-main-title {
  text-align: center;
}

.contact-details {
  display: flex;
  justify-content: space-between;
  text-align: center;
}

.contact-icons {
  text-align: center;
}

/*-------------------------
          GitHub Repos
-------------------------*/

